--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>Document</title>
 </head>
 <body>
@@ -16,7 +17,23 @@
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post">
-
+                    <div class="campo">
+                        <span id="icone" class="material-symbols-outlined">person</span>
+                        <input autocomplete="email" type="email" name="login" id="Ilogin"
+                        placeholder="Seu login" maxlength="30" REQUIRED>
+                        <label for="Ilogin">Login</label>
+                    </div>
+                    <div class="campo">
+                        <span id="icone" class="material-symbols-outlined">
+                            vpn_key
+                            </span>
+                        <input autocomplete="password" type="password" name="senha" id="Isenha" placeholder="Sua senha" minlength="5" maxlength="10"  REQUIRED>
+                        <label for="Isenha">Senha</label>
+                    </div>
+                    <input id="enviar" type="submit" value="Entrar">
+                    <a id="esqueci" href="esqueci.html">
+                        Esqueci a Senha<span class="material-symbols-outlined">mail</span>
+                    </a>
                 </form>
             </div>
         </section>
